<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.chrisneric.ethwallet.MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <Button
        android:id="@+id/WalletButton"
        android:layout_width="161dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:onClick="WalletMenu"
        android:text="@string/wallet"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/helpButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MarketButton" />

    <Button
        android:id="@+id/helpButton"
        android:layout_width="158dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="HelpMenu"
        android:text="@string/help"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/WalletButton"
        app:layout_constraintTop_toBottomOf="@+id/SendButton" />

    <Button
        android:id="@+id/MarketButton"
        android:layout_width="159dp"
        android:layout_height="0dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:onClick="MarketActivity"
        android:text="@string/market"
        app:layout_constraintBottom_toBottomOf="@+id/SendButton"
        app:layout_constraintEnd_toStartOf="@+id/SendButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/SendButton" />

    <Button
        android:id="@+id/SendButton"
        android:layout_width="151dp"
        android:layout_height="0dp"
        android:layout_marginBottom="13dp"
        android:layout_marginEnd="16dp"
        android:onClick="SendActivity"
        android:text="@string/send"
        app:layout_constraintBottom_toTopOf="@+id/helpButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/MarketButton"
        app:layout_constraintTop_toBottomOf="@+id/MainLabel" />

    <TextView
        android:id="@+id/MainLabel"
        android:layout_width="131dp"
        android:layout_height="75dp"
        android:layout_marginBottom="132dp"
        android:layout_marginTop="16dp"
        android:text="@string/mainLabel"
        app:layout_constraintBottom_toTopOf="@+id/SendButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
