<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MarketActivity">

    <Button
        android:id="@+id/backButton"
        android:layout_width="160dp"
        android:layout_height="101dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="MainActivity"
        android:text="@string/main_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/walletButton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/walletButton"
        android:layout_width="160dp"
        android:layout_height="100dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:onClick="WalletMenu"
        android:text="@string/wallet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/ethLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="56dp"
        android:text="@string/ethv"
        app:layout_constraintEnd_toStartOf="@+id/etcValue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/btcLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="40dp"
        android:text="@string/btcv"
        app:layout_constraintEnd_toStartOf="@+id/btcValue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ethLabel" />

    <TextView
        android:id="@+id/etcValue"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="72dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/usd"
        app:layout_constraintBottom_toTopOf="@+id/btcValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ethLabel"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/btcValue"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginBottom="239dp"
        android:layout_marginEnd="78dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="118dp"
        android:text="@string/usd"
        app:layout_constraintBottom_toTopOf="@+id/backButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btcLabel"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>