<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SendActivity">

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="176dp"
        android:layout_height="101dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="392dp"
        android:onClick="MainActivity"
        android:text="@android:string/cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/WalletButton"
        android:layout_width="169dp"
        android:layout_height="100dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="19dp"
        android:onClick="WalletMenu"
        android:text="@string/wallet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cancelButton" />

    <TextView
        android:id="@+id/AddressLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="81dp"
        android:text="@string/address"
        app:layout_constraintBottom_toTopOf="@+id/ValueTxt"
        app:layout_constraintEnd_toStartOf="@+id/AdressTxt"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ValueLabel"
        android:layout_width="41dp"
        android:layout_height="19dp"
        android:layout_marginBottom="27dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="19dp"
        android:text="@string/value"
        app:layout_constraintBottom_toBottomOf="@+id/ValueTxt"
        app:layout_constraintEnd_toStartOf="@+id/ValueTxt"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AdressTxt" />

    <EditText
        android:id="@+id/AdressTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="19dp"
        android:layout_marginEnd="84dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/input"
        app:layout_constraintBottom_toTopOf="@+id/ValueTxt"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/ValueTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="214dp"
        android:layout_marginEnd="72dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/input"
        app:layout_constraintBottom_toTopOf="@+id/cancelButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddressLabel" />
</android.support.constraint.ConstraintLayout>