<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.chrisneric.ethwallet.WalletMenu"
    tools:layout_editor_absoluteY="81dp">

    <Button
        android:id="@+id/SendButton"
        android:layout_width="143dp"
        android:layout_height="76dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="SendActivity"
        android:text="@string/send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.736"
        app:layout_constraintStart_toEndOf="@+id/backButton"
        app:layout_constraintTop_toBottomOf="@+id/Transaction" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="143dp"
        android:layout_height="76dp"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:onClick="MainActivity"
        android:text="@string/main_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Transaction" />

    <EditText
        android:id="@+id/Transaction"
        android:layout_width="298dp"
        android:layout_height="240dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:selectAllOnFocus="false"
        android:text="@string/where_transactions_could_be_listed"
        app:layout_constraintBottom_toTopOf="@+id/SendButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/balanceLabel" />

    <TextView
        android:id="@+id/transactionLabel"
        android:layout_width="87dp"
        android:layout_height="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/Transactions"
        app:layout_constraintBottom_toTopOf="@+id/Transaction"
        app:layout_constraintStart_toStartOf="@+id/balanceLabel" />

    <TextView
        android:id="@+id/balanceLabel"
        android:layout_width="68dp"
        android:layout_height="0dp"
        android:layout_marginBottom="55dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="Balance:"
        app:layout_constraintBottom_toTopOf="@+id/Transaction"
        app:layout_constraintEnd_toStartOf="@+id/ethBalance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ethBalance"
        android:layout_width="0dp"
        android:layout_height="27dp"
        android:layout_marginEnd="197dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:text="0.00 ETH"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/balanceLabel"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>
